    When it is Nothing, propellor knows it can skip displaying the
    description of that property. This is mostly useful in the
    implementation of mempty. (API change)
  * The doNothing property is now simply mempty. The name was retained
    because it can be clearer than mempty in some contexts.
  * Added Apache.confEnabled.

 -- Joey Hess <id@joeyh.name>  Wed, 15 Mar 2017 15:46:42 -0400

propellor (3.4.1) unstable; urgency=medium

  * Fixed https url to propellor git repository.

 -- Joey Hess <id@joeyh.name>  Wed, 01 Mar 2017 16:50:05 -0400

propellor (3.4.0) unstable; urgency=medium

  * Added ConfigurableValue type class, for values that can be used in a
    config file, or to otherwise configure a program.
  * The val function converts such values to String.
  * Removed fromPort and fromIPAddr (use val instead). (API change)
  * Removed several Show instances that were only used for generating
    configuration, replacing with ConfigurableValue instances. (API change)
  * The github mirror of propellor's git repository has been removed,
    since github's terms of service has started imposing unwanted licensing
    requirements.
  * propellor --init: The option to clone propellor's git repository
    used to use the github mirror, and has been changed to use a different
    mirror.

 -- Joey Hess <id@joeyh.name>  Wed, 01 Mar 2017 16:44:20 -0400

propellor (3.3.1) unstable; urgency=medium

  * Apt: Removed the mirrors.kernel.org line from stdSourcesList etc.
    The mirror CDN has a new implementation that should avoid the problems
    with httpredir that made an extra mirror sometimes be needed.
  * Switch Debian CDN address to deb.debian.org.
  * Tor.hiddenService: Fix bug in torrc's HiddenServicePort configuration.
    Thanks, Félix Sipma

 -- Joey Hess <id@joeyh.name>  Mon, 20 Feb 2017 13:49:26 -0400

propellor (3.3.0) unstable; urgency=medium

  * Arch Linux is now supported by Propellor!
    Thanks to Zihao Wang for this port.